karnc/tests/fixtures/positive/149_cron_acl_error/src/reaper.karn
context reaper

type ReaperError = enum { StorageUnavailable }

service sweeper {
  on cron("*/5 * * * *") () -> Effect[Result[(), ReaperError]] {
    Err(StorageUnavailable)
  }
}
