karnc/tests/fixtures/negative/110_cron_bad_params/src/svc.karn
context svc

service sweeper from cron {
  on schedule("*/5 * * * *") (label: String) -> Effect[Result[(), String]] {
    Ok(())
  }
}
